--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
       hibernate:
         format_sql: true
     open-in-view: false
+
+logging:
+  config: classpath:log4j2/log4j2-dev.xml
