feat: send simple message with kafka

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
     implementation 'org.redisson:redisson-spring-boot-starter:3.16.3'
+
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 querydsl {
