--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'com.lmax:disruptor:3.4.2'
@@ -62,6 +64,9 @@ dependencies {
     implementation 'org.redisson:redisson-spring-boot-starter:3.16.3'
 
     implementation 'org.springframework.kafka:spring-kafka'
+
+    // rabbit MQ
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
 }
 
 querydsl {
